# circuitmcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  setup_circuitmcp.bat  setup_circuitmcp.ps1  setup_circuitmcp.sh  uvx.json
.cursor/rules/: circuit-class.mdc  mcp-client-usage.mdc  mcp-server.mdc  project-structure.mdc  troubleshooting.mdc
circuitmcp/: __init__.py  api.py  circuit.py  main.py  manager.py  mcp_server.py  mock_mcp.py  schema.py  test_mcp.py
circuitmcp/tests/: __init__.py  test_api.py  test_circuit.py
examples/: claude_desktop_demo.sh  claude_desktop_mcp_config.json  create_and_simulate.py  mcp_client.py  uvx_demo.py
